--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,16 +1,16 @@
 {
-    "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=d603b393472979ac0fae",
-    "/js/lang-loader.min.js": "/js/lang-loader.min.js?id=01a3593f6f646f6cef13",
-    "/js/app.min.js": "/js/app.min.js?id=c33cc942ab56d1c87476",
-    "/js/dashboard.min.js": "/js/dashboard.min.js?id=64213f4b169179592b3b",
-    "/js/cashier.min.js": "/js/cashier.min.js?id=a3d40be00c4f43f6a11b",
-    "/js/update.min.js": "/js/update.min.js?id=24687986418c817c7577",
-    "/js/pos-init.min.js": "/js/pos-init.min.js?id=673cc447df3f49c38cc9",
-    "/js/pos.min.js": "/js/pos.min.js?id=37d903958900bb9c4e7d",
-    "/js/auth.min.js": "/js/auth.min.js?id=38e69fa9cce2304b7f1c",
-    "/js/setup.min.js": "/js/setup.min.js?id=9d87d13ef820070f2ea1",
-    "/js/popups.min.js": "/js/popups.min.js?id=572eefdd2a9ae0fd1d59",
-    "/js/manifest.js": "/js/manifest.js?id=50c02444dfd29510e1f8",
-    "/css/app.css": "/css/app.css?id=417d9e6ae0461c84d82c",
-    "/js/vendor.js": "/js/vendor.js?id=cd6bd66af13349c991a9"
+    "/js/bootstrap.js": "/js/bootstrap.js",
+    "/js/lang-loader.js": "/js/lang-loader.js",
+    "/js/app.js": "/js/app.js",
+    "/js/dashboard.js": "/js/dashboard.js",
+    "/js/cashier.js": "/js/cashier.js",
+    "/js/update.js": "/js/update.js",
+    "/js/pos-init.js": "/js/pos-init.js",
+    "/js/pos.js": "/js/pos.js",
+    "/js/auth.js": "/js/auth.js",
+    "/js/setup.js": "/js/setup.js",
+    "/js/popups.js": "/js/popups.js",
+    "/js/manifest.js": "/js/manifest.js",
+    "/css/app.css": "/css/app.css",
+    "/js/vendor.js": "/js/vendor.js"
 }
