--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,16 +1,16 @@
 {
-    "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=1af6a8ca3c83a3a085c3",
-    "/js/lang-loader.min.js": "/js/lang-loader.min.js?id=e3abce5c9ceb16c7dcba",
-    "/js/app.min.js": "/js/app.min.js?id=02ac38337db15fe12b64",
-    "/js/dashboard.min.js": "/js/dashboard.min.js?id=0584f7048870c58d035c",
-    "/js/cashier.min.js": "/js/cashier.min.js?id=935d3442bb886dc266f1",
-    "/js/update.min.js": "/js/update.min.js?id=db9cce55e70c77afe826",
-    "/js/pos-init.min.js": "/js/pos-init.min.js?id=2e91e0e6a0f7781e032b",
-    "/js/pos.min.js": "/js/pos.min.js?id=7d3b6ddd9f4484966fc2",
-    "/js/auth.min.js": "/js/auth.min.js?id=3e036021a22bdfab1580",
-    "/js/setup.min.js": "/js/setup.min.js?id=c8ba65cf36b00777ec25",
-    "/js/popups.min.js": "/js/popups.min.js?id=15ed8f1d2618604d8da8",
-    "/js/manifest.js": "/js/manifest.js?id=50c02444dfd29510e1f8",
-    "/css/app.css": "/css/app.css?id=6689f33cbf9d479f90e3",
-    "/js/vendor.js": "/js/vendor.js?id=e5c57f9b644f4aa82e49"
+    "/js/bootstrap.js": "/js/bootstrap.js",
+    "/js/lang-loader.js": "/js/lang-loader.js",
+    "/js/app.js": "/js/app.js",
+    "/js/dashboard.js": "/js/dashboard.js",
+    "/js/cashier.js": "/js/cashier.js",
+    "/js/update.js": "/js/update.js",
+    "/js/pos-init.js": "/js/pos-init.js",
+    "/js/pos.js": "/js/pos.js",
+    "/js/auth.js": "/js/auth.js",
+    "/js/setup.js": "/js/setup.js",
+    "/js/popups.js": "/js/popups.js",
+    "/js/manifest.js": "/js/manifest.js",
+    "/css/app.css": "/css/app.css",
+    "/js/vendor.js": "/js/vendor.js"
 }
